<resources>
    <string name="app_name" translatable="false">FourActivityApp</string>
    <string name="log_in" translatable="false">Log In</string>
    <string name="password" translatable="false">Password</string>
    <string name="username" translatable="false">Username</string>
    <string name="edit" translatable="false">Edit</string>
    <string name="faves" translatable="false">Faves</string>
    <string name="log_out" translatable="false">Log Out</string>
    <string name="profile1" translatable="false">What I like to Do:</string>
    <string name="profile2" translatable="false">Where I\'ve been:</string>
    <string name="profile3" translatable="false">Where I\'m going:</string>
    <string name="profile4" translatable="false">What I Listen To and Watch:</string>
    <string name="faves1" translatable="false">My First Favorite</string>
    <string name="faves2" translatable="false">My Second Favorite</string>
    <string name="faves3" translatable="false">My Third Favorite</string>
    <string name="faves4" translatable="false">My Fourth Favorite</string>

</resources>

