<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username_text"
        android:layout_width="365dp"
        android:layout_height="22dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/username_edit"
        app:layout_constraintEnd_toEndOf="@+id/username_edit"
        app:layout_constraintStart_toStartOf="@+id/username_edit"
        app:layout_constraintTop_toTopOf="@+id/username_edit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/username_edit"
        android:layout_width="376dp"
        android:layout_height="34dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/password_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="355dp"
        android:layout_height="20dp"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/password_edit"
        app:layout_constraintEnd_toEndOf="@+id/password_edit"
        app:layout_constraintStart_toStartOf="@+id/password_edit"
        app:layout_constraintTop_toTopOf="@+id/password_edit" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/roundedbuttons"
        android:text="@string/log_in"
        android:textColor="@color/colorFourText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="207dp"
        android:layout_height="255dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars[8]" />

</android.support.constraint.ConstraintLayout>